--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@ body {
  text-decoration: none;
  font-weight: 100;
  letter-spacing: -2px;
+ text-align: right;
  }
  #header h1 a:hover {
  color: #111;
