--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ body {
 	padding: 20px, 0, 0, 20px;
 	color: #ff5500;
 	text-align: right;
- padding-left: 10px; 
+ margin-right: 10px; 
 }
 #header h1 a {
  color: #fff;
