--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,8 @@ body {
 	padding: 20px, 0, 0, 20px;
 	color: #ff5500;
 	text-align: right;
- margin-right: 10px; 
+	text-align: center;
+  
 }
 #header h1 a {
  color: #fff;
