--- a/styles/style.css
+++ b/styles/style.css
@@ -26,8 +26,8 @@ body {
 	letter-spacing: -1px;
 	padding: 20px, 0, 0, 20px;
 	color: #ff5500;
-	text-align: right;
-	text-align: center;
+	text-align: left;
+	
   
 }
 #header h1 a {
@@ -36,7 +36,8 @@ body {
  font-weight: 100;
  letter-spacing: -2px;
  text-align: right;
- padding-left: 10px; 
+ padding-left: 10px;
+ margin-top: 30px; 
  }
  #header h1 a:hover {
  color: #111;
@@ -72,7 +73,7 @@ color: #2a52be;
  padding: 10px 0 15px 10px;
  list-style-type: square;
  color: #2979BD;
- padding-left: 30px;
+ padding-left: 0px;
 }
 #left ul li a {
  text-decoration: none;
