--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ body {
  text-align: right;
  padding-left: 10px;
  margin-top: 30px; 
+ position: relative;
  }
  #header h1 a:hover {
  color: #111;
