--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ body {
 #header h1{
 	font-size: 28px;
 	letter-spacing: -1px;
-	padding: 20px, 0, 0, 20px;
+	padding: 20px 0 0 20px;
 	color: #ff5500;
 }
 #header h1 a {
@@ -38,10 +38,6 @@ body {
  color: #111;
  }
 
- #header h1 a p {
- 	margin-left: 10px;
- 	padding-left: 100px;
- }
 
 a {
 text-decoration: none;
@@ -60,7 +56,7 @@ color: #2a52be;
 
 #left h2{
 	
- margin: 10px, 0, 0, 0;
+ margin: 10px 0 0 0;
  height: 30px;
  line-height: 30px;
  padding-left: 10px;
