--- a/styles/style.css
+++ b/styles/style.css
@@ -16,44 +16,29 @@ body {
 	margin : 20px auto;
 	}
 
-#header{
-	height: 90px;
-	background: #2a79bc url("images/header.png") no-repeat; 
+#header {
+  height: 90px;
+  background: #2a79bc url("images/header.png") no-repeat;
 }
 
-#header h1{
-	font-size: 28px;
-	letter-spacing: -1px;
-	padding: 20px 0 0 20px;
-	color: #ff5500;
+#header h1 {
+  font-size: 28px;
+  letter-spacing: -1px;
+  padding: 20px 0 0 20px;
+  color: #ff5500;
 }
+
 #header h1 a {
- color: #fff;
- text-decoration: none;
- font-weight: 100;
- letter-spacing: -2px;
- margin-left: 100px;
- }
- #header h1 a:hover {
- color: #111;
- }
-
-
-a {
-text-decoration: none;
- color: #4682B4;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 100;
+  letter-spacing: -2px;
+  //margin-left: 100px;
 }
 
-a:hover{
-	text-decoration: underline;
-color: #2a52be;
+#header h1 a:hover {
+  color: #111;
 }
-#left{
- width: 180px;
- padding-top: 10px;
- float: left;
-}
-
 #left h2{
 	
  margin: 10px 0 0 0;
