--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 #header h1 {
   font-size: 28px;
   letter-spacing: -1px;
-  padding: 30px 0 0 30px;
+  padding: 30px 30px 0 30px;
   color: #ff5500;
 }
 
