--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ body {
 #header h1{
 	font-size: 28px;
 	letter-spacing: -1px;
-	padding: 20px, 0, 0, 20px;
+	padding: 20px 0 0 20px;
 	color: #ff5500;
 	text-align: left;
 	
